Fixed: bug with horizontal scrolling

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,3 +8,8 @@
 
   --font-sans: "Inter", system-ui, sans-serif;
 }
+
+body {
+  overflow-x: hidden;
+}
+
